--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 
     "@ocplabs/contracts": "latest",
 
+    "@uniswap/v2-periphery": "latest",
+    "@uniswap/v2-core": "^1.0.1",
+
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.4",
